[package]
name = "arbi_submiter"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
anyhow = "1.0.96"
bincode = "1.3.3"
bs58 = "0.5.1"
redis = { version = "0.29.0", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.8.5"
anchor-lang = "0.30.1"
reqwest = { version = "0.11.27" }
futures = "0.3.31"
async-compression = "0.4.18"
base64 = "0.22"
log4rs = { version = "1.3.0", features = ["gzip"] }
log = "0.4"
dotenv = "0.15"
lz4_flex = "0.11.3"
spl-associated-token-account = { version = "3.0", features = ["no-entrypoint"] }
